<resources>
    <string name="app_name">project</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="fitnesslogo">fitnessLogo</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">"Enter Your Password"</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="profilepicture">profilePicture</string>
    <string name="setting">Setting</string>
    <string name="workout">Workout</string>
    <string name="profile">Profile</string>
    <string name="welcome_to_fitness_yoga_app">Welcome to fitness yoga app!</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="set_workout_time">Set Workout Time</string>
    <string name="time">Time</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter Your Age</string>


    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>

    <array name="age">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </array>

</resources>
