<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_centerHorizontal = "true"
        android:layout_centerVertical = "true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            android:src="@drawable/fitness"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/editTextUsername"
            android:inputType="text"
            android:hint="@string/enter_your_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_email"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <EditText
            android:inputType="textPassword"
            android:hint="@string/enter_your_password"
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <EditText
            android:inputType="number"
            android:hint="@string/enter_your_age"
            android:id="@+id/editTextAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/gender"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/genderSpinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <Button
            android:layout_margin="15dp"
            android:id="@+id/buttonRegister"
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>